--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,4 +3,13 @@ services:
   rails-webapp:
     build: .
     container_name: rails-webapp
-    ports: ["3000:3000"]
+    ports:
+      - '3000:3000'
+    environment:
+      REDIS_URL: redis://redis:6379/0
+    depends_on:
+      - redis
+  redis:
+    image: redis
+    ports:
+      - '6379:6379'
