memo 컨트롤러, 뷰, 라우트 모두 작성 // 현재 redis의 값 목록과 디테일 확인까지 구현됨 // create 이어서 해야 함

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: rails-webapp
     ports:
       - '3000:3000'
+    volumes:
+      - .:/app
     environment:
       REDIS_URL: redis://redis:6379/0
     depends_on:
